Unify spectrogram calculation

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -43,14 +43,14 @@
     "fname = 'results/calibration.pkl'\n",
     "\n",
     "try:\n",
-    "    raise\n",
     "    df_total = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
     "except:\n",
     "    print('could not read', fname)\n",
     "    df_total = parse_calibration_experiments()\n",
     "    pd.to_pickle(df_total, fname)\n",
-    "    print('saved as', fname)"
+    "    print('saved as', fname)\n",
+    "df_total.tail()"
    ]
   },
   {
@@ -59,15 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wall_analysis import add_spectrogram\n",
+    "from frequency_analysis import add_spectrogram\n",
     "df_total = df_total.assign(spectrogram=None)\n",
     "df_total = df_total.apply(add_spectrogram, axis=1)\n",
     "\n",
     "# without this, the snr column becomes int and things break down below.\n",
     "df_total = df_total.astype(object)\n",
-    "print(df_total.dtypes)\n",
-    "#df_total = df_total.apply(pd.to_numeric, axis=0, errors='ignore', downcast='integer')\n",
-    "#print(df_total.dtypes)"
+    "print(df_total.dtypes)"
    ]
   },
   {
@@ -81,7 +79,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -108,28 +106,12 @@
     "    fig, axs  = plt.subplots(1, 2)\n",
     "    fig.set_size_inches(10, 5)\n",
     "    fig.suptitle(f'experiment \"{row.appendix}\"')\n",
-    "    axs[0].pcolorfast(range(spec_sum.shape[0]), row.frequencies, np.log10(spec_sum.T))\n",
-    "    psd = extract_linear_psd(row.signals_f, row.frequencies, ax=axs[0], **sweep_lines)\n",
+    "    axs[0].pcolorfast(range(spec_sum.shape[1]), row.frequencies, np.log10(spec_sum))\n",
+    "    psd = extract_linear_psd(row.stft, row.frequencies, ax=axs[0], **sweep_lines)\n",
     "\n",
     "    for i in range(psd.shape[0]):\n",
     "        axs[1].semilogy(row.frequencies, psd[i], label=f'mic{i}')\n",
     "    plt.legend(loc='upper left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test new functions\n",
-    "from frequency_analysis import extract_psd, extract_psd_dict\n",
-    "psd_dict1 = [{0: [], 100:[1, 2, 3], 200:[0, 4, 5]}, {100:[0, 1], 200:[1, 2]}]\n",
-    "psd_dict2 = [{100:[1, 2, 5], 250:[1, 4, 5]}, {100:[0, 1], 250:[3, 4]}]\n",
-    "psd_dict_list = [psd_dict1, psd_dict2]\n",
-    "psd, frequencies, psd_std = extract_psd(psd_dict_list)\n",
-    "print(psd.shape)\n",
-    "print(psd, frequencies)"
    ]
   },
   {
@@ -148,8 +130,16 @@
    "outputs": [],
    "source": [
     "from wall_analysis import filter_by_dicts\n",
+    "from frequency_analysis import extract_psd_dict\n",
+    "import progressbar\n",
     "\n",
     "n_freq = 1\n",
+    "results = {\n",
+    "    idx: {\n",
+    "        'psd_df':[],\n",
+    "        'psd_df_harmonics':[]\n",
+    "    } for idx in df_total.index\n",
+    "}\n",
     "\n",
     "dict_chosen = [{\n",
     "    'snr': 1,\n",
@@ -172,15 +162,20 @@
     "df_total = df_total.assign(psd_dict=None)\n",
     "\n",
     "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
-    "for (source, motors), df in df_chosen.groupby(['source', 'motors']):\n",
-    "    fig, ax  = plt.subplots()\n",
-    "    fig.set_size_inches(5, 5)\n",
-    "    ax.grid(which='both')\n",
-    "    legend = []\n",
-    "    for j, row in df.iterrows():\n",
-    "        psd_dict = extract_psd_dict(row.signals_f, row.frequencies_matrix, ax=ax, **kwargs[source])\n",
-    "        df_total.loc[j, 'psd_dict'] = np.array(psd_dict)\n",
-    "        legend.append(row.appendix)"
+    "\n",
+    "counter = 0\n",
+    "with progressbar.ProgressBar(max_value=len(df_chosen)) as p:\n",
+    "    for (source, motors), df in df_chosen.groupby(['source', 'motors']):\n",
+    "        fig, ax  = plt.subplots()\n",
+    "        fig.set_size_inches(5, 5)\n",
+    "        ax.grid(which='both')\n",
+    "        legend = []\n",
+    "        for j, row in df.iterrows():\n",
+    "            p.update(counter)\n",
+    "            counter += 1\n",
+    "            psd_dict = extract_psd_dict(row.stft, row.frequencies_matrix, ax=ax, **kwargs[source])\n",
+    "            results[j]['psd_df'] = psd_dict\n",
+    "            legend.append(row.appendix)"
    ]
   },
   {
@@ -204,15 +199,19 @@
     "\n",
     "# need this to assign list to this column\n",
     "df_total = df_total.assign(psd_dict_harmonics=None)\n",
-    "\n",
     "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
-    "for source, df in df_chosen.groupby('source'):\n",
-    "    fig, ax  = plt.subplots()\n",
-    "    fig.set_size_inches(5, 5)\n",
-    "    ax.grid(which='both')\n",
-    "    for j, row in df.iterrows():\n",
-    "        psd_dict_harmonics = extract_psd_dict(row.signals_f, row.frequencies_matrix, ax=ax, **kwargs_harmonics[source])\n",
-    "        df_total.loc[j, 'psd_dict_harmonics'] = psd_dict_harmonics"
+    "\n",
+    "counter = 0\n",
+    "with progressbar.ProgressBar(max_value=len(df_chosen)) as p:\n",
+    "    for source, df in df_chosen.groupby('source'):\n",
+    "        fig, ax  = plt.subplots()\n",
+    "        fig.set_size_inches(5, 5)\n",
+    "        ax.grid(which='both')\n",
+    "        for j, row in df.iterrows():\n",
+    "            psd_dict_harmonics = extract_psd_dict(row.stft, row.frequencies_matrix, ax=ax, **kwargs_harmonics[source])\n",
+    "            results[j]['psd_df_harmonics'] = psd_dict_harmonics\n",
+    "            p.update(counter)\n",
+    "            counter += 1"
    ]
   },
   {
@@ -223,11 +222,13 @@
    },
    "outputs": [],
    "source": [
+    "from frequency_analysis import extract_psd\n",
+    "\n",
     "for source, df in df_chosen.groupby('source'):\n",
     "    for j, row in df.iterrows():\n",
-    "        n_mics = row.signals_f.shape[1]\n",
+    "        n_mics = row.stft.shape[1]\n",
     "        \n",
-    "        psd, frequencies, psd_std = extract_psd([row.psd_dict], verbose=False) \n",
+    "        psd, frequencies, psd_std = extract_psd(results[j]['psd_df'], verbose=False) \n",
     "        \n",
     "        fig, ax  = plt.subplots()\n",
     "        fig.set_size_inches(10, 5)\n",
@@ -257,25 +258,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#chosen experiments for calibration\n",
     "chosen_experiments = ['_HALL', '_HALL2', '_HALL3']\n",
     "#chosen_experiments = ['_HALL', '_HALL2']\n",
     "\n",
     "df_calib = pd.DataFrame(index=[], columns=['frequencies', 'psd', 'psd_std', 'type', 'source', \n",
-    "                                           'method', 'n_freq'])\n",
+    "                                           'method'])\n",
     "methods = ['median', 'median-reject'] # 'mean', 'mean-reject'\n",
     "\n",
     "df_chosen = filter_by_dicts(df_total, dict_chosen)\n",
     "for source, df in df_chosen.groupby('source'):\n",
-    "    for type_ in ['psd_dict', 'psd_dict_harmonics']:\n",
+    "    \n",
+    "    psd_df_list = {'psd_df':[], 'psd_df_harmonics':[]}\n",
+    "    for j, row in df.iterrows():\n",
+    "        if not row.appendix in chosen_experiments: \n",
+    "            print('skipping', row.appendix)\n",
+    "            continue\n",
     "        \n",
-    "        psd_dict_list = []\n",
-    "        for appendix in chosen_experiments:\n",
-    "            psd_dict = list(df.loc[df.appendix==appendix, type_].values)\n",
-    "            psd_dict_list += psd_dict\n",
+    "        for type_ in psd_df_list.keys():\n",
+    "            psd_df_list[type_].append(results[j][type_])\n",
     "        \n",
+    "    for type_ in psd_df_list.keys():\n",
     "        for method in methods:\n",
-    "            psd, frequencies, psd_std = extract_psd(psd_dict_list, method=method, verbose=False) \n",
+    "            df_list = psd_df_list[type_]\n",
+    "            df_combined = pd.concat(df_list)\n",
+    "            psd, frequencies, psd_std = extract_psd(df_combined, method=method, verbose=False) \n",
     "            df_calib.loc[len(df_calib), :] = {\n",
     "                'frequencies': frequencies,\n",
     "                'psd': psd, \n",
@@ -283,13 +299,13 @@
     "                'type': type_, \n",
     "                'source': source,\n",
     "                'method': method,\n",
-    "                'n_freq': n_freq\n",
     "            }\n",
     "    \n",
     "fname = f'results/calibration_results.pkl'\n",
     "pd.to_pickle(df_calib, fname)\n",
     "print(f'saved as {fname}')\n",
-    "#df_chosen = df_total.loc[]"
+    "#df_chosen = df_total.loc[]\n",
+    "df_calib"
    ]
   },
   {
@@ -354,12 +370,12 @@
     "for i, row in df_chosen.iterrows():\n",
     "    fig, ax = plt.subplots()\n",
     "    spec = np.mean(row.spectrogram**2, axis=1)\n",
-    "    ax.pcolorfast(row.seconds, row.frequencies, np.log10(spec[:-1, :-1].T))\n",
+    "    ax.pcolorfast(row.seconds, row.frequencies, np.log10(spec[:-1, :-1]))\n",
     "    fig.set_size_inches(10, 5)\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    ax.set_xlabel('time [s]')\n",
     "    \n",
-    "    psd = extract_linear_psd(row.signals_f, row.frequencies, slope=slope, offset=offset, ax=ax, \n",
+    "    psd = extract_linear_psd(row.stft, row.frequencies, slope=slope, offset=offset, ax=ax, \n",
     "                             delta=delta, times=row.seconds)\n",
     "    fname = 'plots/sweep_nomotors_spec.pdf'\n",
     "    fig.savefig(fname, bbox_inches='tight')\n",
@@ -397,10 +413,10 @@
     "    spec = np.mean(row.spectrogram**2, axis=1)\n",
     "    fig.set_size_inches(10, 5)\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
-    "    ax.pcolorfast(row.seconds, row.frequencies, np.log10(spec[:-1, :-1].T))\n",
+    "    ax.pcolorfast(row.seconds, row.frequencies, np.log10(spec[:-1, :-1]))\n",
     "    ax.set_xlabel('time [s]')\n",
     "    \n",
-    "    psd = extract_linear_psd(row.signals_f, row.frequencies, slope=slope, offset=offset, ax=ax, \n",
+    "    psd = extract_linear_psd(row.stft, row.frequencies, slope=slope, offset=offset, ax=ax, \n",
     "                             delta=delta, times=row.seconds)\n",
     "    fname = 'plots/sweep_motors_spec.pdf'\n",
     "    fig.savefig(fname, bbox_inches='tight')\n",
@@ -437,7 +453,7 @@
     "df_chosen = filter_by_dicts(df_total, [chosen_dict])\n",
     "for i, row in df_chosen.iterrows():\n",
     "    fig, ax = plt.subplots()\n",
-    "    spec = np.mean(row.spectrogram**2, axis=1).T\n",
+    "    spec = np.mean(row.spectrogram**2, axis=1)\n",
     "    plot_spec = np.full(spec.shape, np.nan)\n",
     "    plot_spec[spec>0] = np.log10(spec[spec>0])\n",
     "    ax.set_title(f'motors: {row.motors}')\n",
@@ -447,11 +463,11 @@
     "    #ax.pcolorfast(row.seconds, all_frequencies, plot_spec[:-1, :-1])\n",
     "    ax.pcolorfast(range(len(row.seconds)), all_frequencies, plot_spec[:-1, :-1])#, cmap='inferno')\n",
     "    ax.set_xlabel('time [idx]')\n",
-    "    ax.set_ylim(1000, 5000)\n",
+    "    #ax.set_ylim(1000, 5000)\n",
     "    \n",
-    "    psd_dict = extract_psd_dict(row.signals_f, row.frequencies_matrix, n_freq=1, \n",
+    "    psd_dict = extract_psd_dict(row.stft, row.frequencies_matrix, n_freq=1, \n",
     "                                min_t=100, max_t=300)\n",
-    "    psd, frequencies, psd_std  = extract_psd([psd_dict])\n",
+    "    psd, frequencies, psd_std  = extract_psd(psd_dict)\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(10, 5)\n",
     "    for i in range(psd.shape[0]):\n",
@@ -632,13 +648,11 @@
    "source": [
     "frequencies_slices = [1750, 2375, 3125, 3875]\n",
     "\n",
-    "spec_motors = get_spectrogram(df_motors)\n",
+    "spec_motors_all, frequencies_motors = get_spectrogram(df_motors)\n",
+    "spec_motors = np.mean(spec_motors_all, axis=-2)\n",
     "\n",
     "#times_motors = np.arange(spec_motors.shape[1]) #\n",
     "times_motors = df_motors.seconds.values\n",
-    "frequencies_motors = df_motors.iloc[0].frequencies\n",
-    "\n",
-    "print(times_motors)\n",
     "mask_times = (times_motors < 20) & (times_motors > 7)\n",
     "\n",
     "avg_motor_psd = np.mean(spec_motors[:, mask_times]**2, axis=1) # time range chosen from plot\n",
@@ -648,7 +662,6 @@
     "    \n",
     "    spec = spec_motors[mask_freq, :]\n",
     "    #spec = spec[:, mask_times]\n",
-    "    print(spec.shape)\n",
     "    \n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(10, 5)\n",
@@ -700,7 +713,7 @@
     "if kwargs['snr'] != 0:\n",
     "    raise ValueError('need to implement spectrogram estimation for snr>0')\n",
     "    \n",
-    "stft = np.array([*df.loc[:, \"signals_f\"]]).transpose(2, 1, 0)\n",
+    "stft = np.array([*df.loc[:, \"stft\"]]).transpose(2, 1, 0)\n",
     "print(stft.shape)\n",
     "times = (df.timestamp.values - df.iloc[0].timestamp)/ 1000.0\n",
     "fig, axs = plt.subplots(stft.shape[1], sharex=True, sharey=True)\n",
@@ -788,12 +801,14 @@
     "fname_chirp = get_fname(**kwargs)\n",
     "fname = f'results/{exp_name}_{fname_chirp}.pk'\n",
     "try:\n",
+    "    raise\n",
     "    df_chirp = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
     "except:\n",
     "    df_chirp = read_df_from_wav(f'../experiments/{exp_name}/export/{fname_chirp}.wav', n_buffer=n_buffer)\n",
     "    pd.to_pickle(df_chirp, fname)\n",
-    "    print('wrote', fname)"
+    "    print('wrote', fname)\n",
+    "df_chirp.tail()"
    ]
   },
   {
@@ -802,12 +817,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wall_analysis import extract_linear_psd\n",
+    "from frequency_analysis import extract_linear_psd\n",
     "\n",
-    "spec_chirp = get_spectrogram(df_chirp)\n",
-    "signals_f = np.array([*df_chirp.loc[:, \"signals_f\"]])\n",
-    "frequencies_chirp = np.array(df_chirp.iloc[0].frequencies)\n",
+    "spec_chirp_all, frequencies_chirp = get_spectrogram(df_chirp)\n",
+    "spec_chirp = np.mean(spec_chirp_all, axis=-2)\n",
+    "stft = np.array([*df_chirp.loc[:, \"signals_f\"]])\n",
     "seconds = (df_chirp.timestamp.values - df_chirp.iloc[0].timestamp)/ 2048\n",
+    "print(np.max(seconds))\n",
     "\n",
     "#times_chirp = np.arange(3000, 5000)\n",
     "times_chirp = np.arange(spec_chirp.shape[1])\n",
@@ -817,8 +833,10 @@
     "\n",
     "spec_small = spec_chirp[mask_freq, :]\n",
     "spec_small = spec_small[:, times_chirp]\n",
+    "print(spec_small.shape)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(10, 5)\n",
     "ax.pcolorfast(times_chirp, frequencies_chirp[mask_freq], np.log10(spec_small))"
    ]
   },
@@ -831,13 +849,15 @@
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 10)\n",
     "\n",
-    "slope = 14930 / 21170 \n",
+    "slope = 16000 / 8200 #21170 \n",
     "offset = 0\n",
+    "print(spec_small.shape)\n",
+    "print(times_chirp.shape)\n",
     "\n",
-    "ax.pcolorfast(range(len(times_chirp)), frequencies_chirp[mask_freq], np.log10(spec_small))\n",
+    "ax.pcolorfast(times_chirp, frequencies_chirp[mask_freq], np.log10(spec_small))\n",
     "ax.set_ylim(min_freq_plot, max_freq_plot)\n",
     "\n",
-    "psd = extract_linear_psd(signals_f, frequencies_chirp, slope, offset, delta=500, ax=ax)\n",
+    "psd = extract_linear_psd(stft, frequencies_chirp, slope, offset, delta=200, ax=ax)\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 10)\n",
     "plt.title('psd of buzzer frequency sweep')\n",
@@ -953,9 +973,9 @@
     "    fig = plt.figure()\n",
     "    fig.set_size_inches(15, 10)\n",
     "    times = df.timestamp.values / 1000\n",
-    "    frequencies = df.iloc[0].frequencies\n",
     "\n",
-    "    spec = get_spectrogram(df)\n",
+    "    spec_all, frequencies = get_spectrogram(df)\n",
+    "    spec = np.mean(spec_all, axis=-2)\n",
     "    spec = spec[frequencies < max_freq_plot, :]\n",
     "    spec = spec[:, times < max_time]\n",
     "    plt.pcolormesh(times[times < max_time], frequencies[frequencies < max_freq_plot], \n",
@@ -973,7 +993,8 @@
    "source": [
     "from evaluate_data import read_df_from_wav\n",
     "df_wav = read_df_from_wav('../experiments/2021_01_07_snr_study/export/motors_nosnr_noprops_mono1750.wav')\n",
-    "spec = get_spectrogram(df_wav)"
+    "spec_all, freqs = get_spectrogram(df_wav)\n",
+    "spec = np.mean(spec_all, axis=-2)"
    ]
   },
   {
@@ -1001,9 +1022,10 @@
    "outputs": [],
    "source": [
     "from evaluate_data import read_df_from_wav\n",
-    "from evaluate_data import get_spectrogram\n",
+    "from frequency_analysis import get_spectrogram\n",
     "df_wav = read_df_from_wav('../experiments/2020_12_2_chirp/export/nomotors_nosnr_noprops_sweep_all_50.wav')\n",
-    "spec = get_spectrogram(df_wav)"
+    "spec_all, freqs = get_spectrogram(df_wav)\n",
+    "spec = np.mean(spec_all, axis=-2)"
    ]
   },
   {
@@ -1016,7 +1038,7 @@
    "source": [
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "buzzer_freqs = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
-    "freqs = df_wav.iloc[0].frequencies\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(15, 15)\n",
     "ax.pcolorfast(range(spec.shape[0]), freqs, np.log10(spec))\n",
@@ -1036,13 +1058,6 @@
     "fig.set_size_inches(15, 15)\n",
     "ax.pcolorfast(range(spec_zoom.shape[1]), freqs[:max_freq], np.log10(spec_zoom))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
