--- a/notebooks/SignalAnalysis.ipynb
+++ b/notebooks/SignalAnalysis.ipynb
@@ -61,7 +61,7 @@
     "    'strongest_freqs'\n",
     "])\n",
     "\n",
-    "DISTANCE_LIST = [0]\n",
+    "DISTANCE_LIST = [None]\n",
     "DEGREE_LIST = [90]\n",
     "PROPS_LIST = [False, True]\n",
     "SNR_LIST = [False, True]\n",
