--- a/notebooks/SnrStudy.ipynb
+++ b/notebooks/SnrStudy.ipynb
@@ -40,9 +40,9 @@
     "        mean_spec = np.mean(spec, axis=-2) # average over mics\n",
     "    else:\n",
     "        mean_spec = spec\n",
-    "    \n",
+    "        \n",
     "    mask = (freqs < max_freq) & (freqs > min_freq)\n",
-    "    ax.pcolorfast(range(mean_spec.shape[1]), freqs[mask], np.log10(mean_spec[mask]))\n",
+    "    ax.pcolorfast(range(mean_spec.shape[1]), freqs[mask], np.log10(mean_spec[mask, :]))\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    return ax"
    ]
@@ -180,7 +180,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Second study"
+    "# Second study\n",
+    "\n",
+    "The external buzzer is used to play sweeps and we use both 45000 and 55000 for the propeller speeds."
    ]
   },
   {
@@ -288,7 +290,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "plt.figure()\n",
@@ -315,12 +319,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## get mask"
+    "clean pipeline without propellers:  \n",
+    " 1. get the spectrogram (already done)\n",
+    " 2. sort the bins to find frequencies_matrix.\n",
+    " 3. apply this mask to find the psd"
    ]
   },
   {
@@ -329,26 +334,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for buzzer_external: need to find the mask corresponding to sweep\n",
-    "# heuristically\n",
+    "# 1. sort bins\n",
+    "\n",
+    "n_freq = 2\n",
     "row_sweep = df_specs.loc[df_specs.title==\"sweep\"].iloc[0]\n",
-    "\n",
     "spec = np.mean(row_sweep.spec, axis=-2)\n",
-    "max_bins = np.argmax(spec, axis=0)\n",
-    "max_freqs = row_sweep.freqs[max_bins]\n",
+    "frequencies_matrix = np.argsort(spec, axis=0)[::-1]\n",
     "\n",
+    "plt.figure()\n",
+    "for i in range(n_freq):\n",
+    "    plt.plot(range(frequencies_matrix.shape[1]), frequencies_matrix[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. extract psd_df\n",
+    "import seaborn as sns\n",
+    "from frequency_analysis import extract_psd, psd_df_from_spec\n",
+    "spec = row_sweep.spec\n",
+    "psd_df = psd_df_from_spec(spec, row_sweep.freqs, frequencies_matrix, min_t=270, max_t=550, n_freq=n_freq)\n",
+    "#psd_df = extract_psd_df(signals_f, mask_psd, min_t=250, max_t=520)\n",
+    "#print(psd_df.dtypes)\n",
+    "psd_df.head()\n",
+    "sns.scatterplot(data=psd_df, x='frequency', y='magnitude', hue='counter')\n",
+    "plt.yscale('log')\n",
+    "plt.xlim(2000, 5000)\n",
+    "\n",
+    "plt.figure()\n",
+    "label = 'max'\n",
+    "for (i_mic, f), df in psd_df.groupby(['mic', 'frequency']):\n",
+    "    values = df.magnitude.values\n",
+    "    plt.scatter(f, np.max(values), color='C0', label=label)\n",
+    "    label=None\n",
+    "    \n",
+    "psd, freqs, psd_std = extract_psd(psd_df, method='median-reject')\n",
+    "for i_mic in range(psd.shape[0]):\n",
+    "    plt.plot(freqs, psd[i_mic, :], label='median-reject', color='C1')\n",
+    "plt.yscale('log')\n",
+    "plt.legend()\n",
+    "plt.xlim(2000, 5000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "clean pipeline with propellers:  \n",
+    " 1. get the spectrogram (already done)\n",
+    " 2. align frequencies matrix from before\n",
+    " 3. apply this mask to find the psd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_bins = frequencies_matrix[0]\n",
+    "max_freqs = row_sweep.freqs[max_bins]\n",
     "start_freq = max_freqs[np.argmin(np.abs(max_freqs - 3000))]\n",
     "start_idx = np.where(max_freqs == start_freq)[0][0]\n",
     "end_idx = np.where(max_freqs > 2000)[0][-1]\n",
     "end_idx -= start_idx\n",
-    "\n",
-    "mask_psd = max_bins[start_idx:end_idx]\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.plot(range(len(max_freqs))-start_idx, max_bins)\n",
-    "plt.plot(mask_psd)\n",
-    "plt.axvline(0, color='k')\n",
-    "plt.axvline(end_idx-start_idx, color='k')"
+    "mask_no_motors = frequencies_matrix[:, start_idx:end_idx]"
    ]
   },
   {
@@ -357,10 +410,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for buzzer_onboard: the mask is simply the strongest frequency bin\n",
-    "# for each buffer. \n",
-    "# we already have a function for that! \n",
-    "# use extract_psd_dict etc for this purpose. "
+    "row_sweep_motors = df_specs.loc[df_specs.title == 'sweep 45000'].iloc[0]\n",
+    "\n",
+    "max_bins = mask_no_motors[0]\n",
+    "spec = np.mean(row_sweep_motors.spec, axis=-2)\n",
+    "sums = []\n",
+    "for shift in range(spec.shape[1]-mask_no_motors.shape[1]):\n",
+    "    mask = np.zeros_like(spec)\n",
+    "    mask[max_bins, np.arange(len(max_bins))+shift] = 1\n",
+    "    sums.append(np.sum(mask * spec))\n",
+    "best_shift = np.argmax(sums)\n",
+    "print('best shift:', best_shift)\n",
+    "mask = np.zeros_like(spec)\n",
+    "mask[max_bins, np.arange(len(max_bins))+best_shift] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fig_all, ax_all = plt.subplots()\n",
+    "freqs = row_sweep_motors.freqs\n",
+    "ax = plot_spectrogram(spec, freqs, max_freq=5000)\n",
+    "ax.set_title(\"spectrogram with motors\")\n",
+    "\n",
+    "x, y = np.where(mask.T > 0)\n",
+    "index_matrix = np.zeros((1, spec.shape[1]), dtype=np.int)\n",
+    "index_matrix[0, best_shift:best_shift+len(y)] = y\n",
+    "\n",
+    "ax.plot(x, freqs[y], color='white', ls=':')\n",
+    "ax.set_ylim(1000, 5000)"
    ]
   },
   {
@@ -371,77 +452,14 @@
    },
    "outputs": [],
    "source": [
-    "start = 300 #250 \n",
-    "unique_bins = np.unique(mask_psd[start:])\n",
-    "\n",
     "fig_all, ax_all = plt.subplots()\n",
-    "\n",
-    "fig, axs = plt.subplots(len(unique_bins), sharey=True, sharex=True)\n",
-    "fig.set_size_inches(10, len(unique_bins)*3)\n",
-    "for j, title in enumerate([\"sweep\", \"sweep 45000\"]):\n",
-    "    row = df_specs.loc[df_specs.title==title].iloc[0]\n",
-    "    spec = np.mean(row.spec, axis=-2)\n",
-    "\n",
-    "    max_freqs = row.freqs[np.argmax(spec, axis=0)]\n",
-    "    start_freq = max_freqs[np.argmin(np.abs(max_freqs - 3000))]\n",
-    "    start_idx = np.where(max_freqs == start_freq)[0][0]\n",
-    "\n",
-    "    spec = spec[:, start_idx:]\n",
-    "    freqs = row.freqs\n",
-    "    times = range(spec.shape[1])\n",
-    "\n",
-    "    ax = plot_spectrogram(spec, freqs, max_freq=5000)\n",
-    "    ax.set_title(title)\n",
-    "    max_freqs = row.freqs[mask_psd]\n",
-    "    ax.plot(range(len(max_freqs)), max_freqs, color='white', ls=':')\n",
-    "    ax.set_ylim(1000, 5000)\n",
-    "    ax.axvline(start, color='white', ls='-')\n",
-    "    \n",
-    "    ax = plot_spectrogram(spec[:, start:], freqs, max_freq=5000, min_freq=2000)\n",
-    "    #ax.plot(range(len(max_freqs[start:])), max_freqs[start:], color='white', ls=':')\n",
-    "    ax.set_title(title)\n",
-    "    \n",
-    "    max_amps = {}\n",
-    "    for i, bin_ in enumerate(unique_bins):\n",
-    "\n",
-    "        freq = np.round(freqs[bin_])\n",
-    "        # start from 1 to remove \"edge\" values\n",
-    "        cut_indices = np.where(mask_psd[start:]==bin_)[0][1:]\n",
-    "        if not len(cut_indices):\n",
-    "            continue\n",
-    "\n",
-    "        cut_spec = spec[:, start+cut_indices]\n",
-    "        avg_spec = np.median(cut_spec, axis=1)\n",
-    "        std_spec = np.std(cut_spec[bin_]) / avg_spec[bin_] * 100\n",
-    "        \n",
-    "        if len(cut_indices) >= 10:\n",
-    "            max_amps[freq] = (avg_spec[bin_], std_spec)\n",
-    "        \n",
-    "        axs[i].semilogy(freqs, avg_spec, ls=ls, label=f'std ratio: {std_spec:.0f}')\n",
-    "        axs[i].legend(loc='upper right', framealpha=1.0)\n",
-    "        axs[i].set_title(f'{freq} Hz: average over {len(cut_indices)}')\n",
-    "        axs[i].grid(True, which='both')\n",
-    "    axs[i].set_ylim(1e-3, 1e5)\n",
-    "    axs[i].set_xlim(1000, 5000)\n",
-    "    \n",
-    "    means = [v[0] for v in max_amps.values()]\n",
-    "    stds = [v[1] for v in max_amps.values()]\n",
-    "    ax_all.errorbar(list(max_amps.keys()), means, \n",
-    "                    stds, marker='o', label=title+' mean', \n",
-    "                    ls='-', color=f'C{j}', capsize=5.0)\n",
-    "    \n",
-    "    #ax_all.semilogy(list(max_amps.keys()), stds, marker='o', label=title+' std', ls=':', color=f'C{j}')\n",
-    "    #ax_all.set_yscale('log')\n",
-    "ax_all.legend(framealpha=1.0)\n",
-    "\n",
-    "fname = f'plots/{exp_dir}-amplitude.eps'\n",
-    "fig_all.savefig(fname, bbox_inches='tight')\n",
-    "print('saved as', fname)\n",
-    "\n",
-    "\n",
-    "fname = f'plots/{exp_dir}-sweep.eps'\n",
-    "fig.savefig(fname, bbox_inches='tight')\n",
-    "print('saved as', fname)"
+    "psd_df = psd_df_from_spec(row_sweep_motors.spec, row_sweep_motors.freqs, index_matrix, \n",
+    "                          min_t=300, max_t=520, n_freq=1)\n",
+    "means, freqs, stds = extract_psd(psd_df)\n",
+    "for i_mic in range(means.shape[0]):\n",
+    "    ax_all.errorbar(freqs, means[i_mic], stds[i_mic], \n",
+    "                    marker='o', ls='-', color=f'C{i_mic}', capsize=5.0)\n",
+    "ax_all.set_yscale('log')"
    ]
   },
   {
@@ -490,17 +508,18 @@
    "source": [
     "df_audio.tail()\n",
     "\n",
-    "spec_audio, all_freqs = get_spectrogram(df_audio)\n",
+    "spec_audio_all, all_freqs = get_spectrogram(df_audio)\n",
+    "spec_audio = np.mean(spec_audio_all, axis=-2)\n",
     "spec_soundcard = df_soundcard.spec\n",
     "\n",
     "times = range(110, 300) #len(df_audio))\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(10, 5)\n",
-    "ax.pcolorfast(times, all_freqs, np.log10(spec_audio[:, times]))\n",
+    "ax.pcolorfast(times, all_freqs, np.log10(spec_audio[:-1, times[:-1]]))\n",
     "ax.set_ylim(plot_min_freq, plot_max_freq)\n",
     "\n",
-    "signals_f_tensor = np.array([*df_audio.signals_f.values])\n",
+    "stft = np.array([*df_audio.signals_f.values])\n",
     "frequencies_matrix = np.array([*df_audio.frequencies.values])\n",
     "\n",
     "plt.figure()\n",
@@ -513,7 +532,7 @@
     "    \n",
     "    if np.any(mask):\n",
     "        freqs_col = col[mask]\n",
-    "        signals_col = np.mean(np.abs(signals_f_tensor[t, :, mask])**2, axis=1)\n",
+    "        signals_col = np.mean(np.abs(stft[t, :, mask])**2, axis=1)\n",
     "\n",
     "        max_bin = np.argmax(signals_col)\n",
     "        max_freq = freqs_col[max_bin]\n",
@@ -542,7 +561,8 @@
     "#row = df_specs.loc[df_specs.title == '55000'].iloc[0]\n",
     "\n",
     "# find strongest frequency above 100\n",
-    "max_freqs = np.round(row.freqs[np.argmax(row.spec, axis=0)], 1)\n",
+    "spec = np.mean(row.spec, axis=1)\n",
+    "max_freqs = np.round(row.freqs[np.argmax(spec, axis=0)], 1)\n",
     "max_freqs_valid = max_freqs[max_freqs > 100]\n",
     "\n",
     "# need to add the max value in the end to make sure this works for all bins\n",
@@ -557,9 +577,9 @@
     "plt.figure()\n",
     "plt.title(f'loudness of bin at {max_freq} Hz')\n",
     "min_idx, max_idx = np.min(valid_time_indices), np.max(valid_time_indices)\n",
-    "plt.semilogy(range(min_idx, max_idx),row.spec[bin_, min_idx:max_idx])\n",
-    "plt.scatter(valid_time_indices, row.spec[bin_, valid_time_indices], color='C1', label=f'{max_freq} is loudest bin')\n",
-    "plt.scatter(invalid_time_indices[min_idx:], row.spec[bin_, invalid_time_indices[min_idx:]], color='C2', label=f'{max_freq} is not loudest bin')\n",
+    "plt.semilogy(range(min_idx, max_idx), spec[bin_, min_idx:max_idx])\n",
+    "plt.scatter(valid_time_indices, spec[bin_, valid_time_indices], color='C1', label=f'{max_freq} is loudest bin')\n",
+    "plt.scatter(invalid_time_indices[min_idx:], spec[bin_, invalid_time_indices[min_idx:]], color='C2', label=f'{max_freq} is not loudest bin')\n",
     "ylim = plt.ylim()\n",
     "print(ylim)\n",
     "plt.legend()"
@@ -573,10 +593,10 @@
    },
    "outputs": [],
    "source": [
-    "max_bins_valid = np.argmax(row.spec, axis=0)\n",
+    "max_bins_valid = np.argmax(spec, axis=0)\n",
     "plt.figure()\n",
     "plt.title('loudness of loudest bin')\n",
-    "plt.semilogy(row.spec[max_bins_valid, range(row.spec.shape[1])])\n",
+    "plt.semilogy(spec[max_bins_valid, range(spec.shape[1])])\n",
     "plt.ylim(*ylim)"
    ]
   },
@@ -631,8 +651,7 @@
     "        except FileNotFoundError:\n",
     "            print('skipping', filename)\n",
     "            continue\n",
-    "        spec = get_spectrogram(df_wav)\n",
-    "        freqs = df_wav.iloc[0].frequencies\n",
+    "        spec, freqs = get_spectrogram(df_wav)\n",
     "\n",
     "        ax = plot_spectrogram(spec, freqs, max_freq=5000)\n",
     "        ax.set_title(title)\n",
@@ -687,8 +706,7 @@
     "            assert len(df_row) == 1\n",
     "            row = df_row.iloc[0]\n",
     "\n",
-    "            spec = row.spec[:, start_time:start_time+number]\n",
-    "            #spec = row.spec[:, 5:20]\n",
+    "            spec = np.mean(row.spec[..., start_time:start_time+number], axis=-2)\n",
     "            freqs = row.freqs\n",
     "            #ax_spec = plot_spectrogram(spec, row.freqs)\n",
     "            #ax_spec.set_title(title)\n",
