--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -69,7 +69,8 @@
     "    df_freq = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
     "except:\n",
-    "    print('Error: run wall_analysis.py to parse experiments.')"
+    "    print('Error: run wall_analysis.py to parse experiments.')\n",
+    "df_freq.tail()"
    ]
   },
   {
@@ -78,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wall_analysis import add_spectrogram\n",
+    "from frequency_analysis import add_spectrogram\n",
     "\n",
     "df_freq = df_freq.assign(spectrogram=None)\n",
     "df_freq = df_freq.apply(add_spectrogram, axis=1)"
@@ -137,7 +138,7 @@
     "        row = df_this.iloc[0]\n",
     "        \n",
     "        spec = np.mean(row.spectrogram, axis=1) # n_times x n_mics x n_freqs\n",
-    "        axs[0, j].pcolorfast(row.seconds, row.frequencies, np.log(spec.T))\n",
+    "        axs[0, j].pcolorfast(row.seconds, row.frequencies, np.log(spec))\n",
     "        axs[0, j].set_title(f'motors {motors}')\n",
     "\n",
     "    axs[0, 1].plot([row.seconds[0], row.seconds[cut_x]], [row.frequencies[cut_y[0]], row.frequencies[cut_y[0]]], color='red', linewidth=1)\n",
@@ -145,7 +146,7 @@
     "    axs[0, 1].plot([row.seconds[cut_x], row.seconds[cut_x]], [row.frequencies[cut_y[0]], row.frequencies[cut_y[-1]]], color='red', linewidth=1)\n",
     "    axs[0, 1].plot([row.seconds[0], row.seconds[cut_x]], [row.frequencies[cut_y[-1]], row.frequencies[cut_y[-1]]], color='red', linewidth=1)\n",
     "    \n",
-    "    axs[0, 2].pcolorfast(row.seconds[:cut_x], row.frequencies[cut_y], np.log(spec.T[cut_y, :cut_x]))\n",
+    "    axs[0, 2].pcolorfast(row.seconds[:cut_x], row.frequencies[cut_y], np.log(spec[cut_y, :cut_x]))\n",
     "    #fig.savefig(f'/home/duembgen/Desktop/spec-{chosen_source}.png', bbox_inches='tight')"
    ]
   },
@@ -189,14 +190,14 @@
     "        continue\n",
     "\n",
     "    row = df_this.iloc[0]\n",
-    "    signals_f = row.signals_f # times x n_mics x frequencies\n",
+    "    stft = row.stft # times x n_mics x frequencies\n",
     "    frequencies = row.frequencies\n",
     "    \n",
     "    mean_f = frequencies[bins_[1]] - frequencies[bins_[0]] \n",
     "    expected_period = SPEED_OF_SOUND / (2 * distance * 1e-2) # m/s / m = Hz\n",
     "\n",
     "    for mic_idx in mic_indices:\n",
-    "        spec = np.sum(np.abs(signals_f[:, mic_idx, bins_]), axis=0) # times x frequencies\n",
+    "        spec = np.sum(np.abs(stft[:, mic_idx, bins_]), axis=0) # times x frequencies\n",
     "        axs[0, mic_idx].semilogy(frequencies[bins_], spec, label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
     "        axs[0, mic_idx].set_title(f'm{mic_idx}')\n",
     "\n",
@@ -287,7 +288,8 @@
     "        if len(df_this) != 1:\n",
     "            continue\n",
     "        row = df_this.iloc[0]\n",
-    "        spec = np.mean(row.spectrogram, axis=1).T\n",
+    "        spec = np.mean(row.spectrogram, axis=1)\n",
+    "        all_frequencies = np.unique(row.frequencies_matrix)\n",
     "        axs[0, j].pcolorfast(row.seconds, all_frequencies, np.log10(spec[:-1, :-1]))\n",
     "        axs[0, j].set_xlabel('time [s]')\n",
     "        \n",
@@ -339,14 +341,12 @@
     "\n",
     "CHOSEN_MICS = [0, 1, 2, 3] #[0, 1, 2, 3] #[3]\n",
     "\n",
-    "n_freq = 1 \n",
     "calib_df = pd.read_pickle('results/calibration_results.pkl')\n",
     "chosen_dict = {\n",
     "   'source': 'sweep',\n",
     "   #'method': 'median-reject',\n",
     "   'method': 'median',\n",
-    "   'type': 'psd_dict',\n",
-    "   'n_freq': n_freq\n",
+    "   'type': 'psd_df',\n",
     "}\n",
     "calib_df = filter_by_dicts(calib_df, [chosen_dict])\n",
     "assert len(calib_df) == 1\n",
@@ -418,9 +418,9 @@
     "\n",
     "    row = df_this.iloc[0]\n",
     "    \n",
-    "    psd_dict = extract_psd_dict(row.signals_f, row.frequencies_matrix, \n",
+    "    psd_dict = extract_psd_dict(row.stft, row.frequencies_matrix, \n",
     "                                min_t=60, max_t=190, n_freq=n_freq)\n",
-    "    psd, frequencies, psd_std = extract_psd([psd_dict])\n",
+    "    psd, frequencies, psd_std = extract_psd(psd_dict)\n",
     "    psd_calib = calib(frequencies)\n",
     "    #psd_mean = np.mean(psd_calib, axis=0)\n",
     "    \n",
@@ -682,14 +682,14 @@
     "        row = df_this.iloc[0]\n",
     "        spec = np.mean(row.spectrogram, axis=1)\n",
     "\n",
-    "        axs[0, j].pcolorfast(row.seconds, row.frequencies, np.log10(spec.T))\n",
+    "        axs[0, j].pcolorfast(row.seconds, row.frequencies, np.log10(spec))\n",
     "        axs[0, j].set_title(f'motors {motors}')\n",
     "        j_square = j\n",
     "        \n",
     "    if j_square is not None:\n",
     "        plot_square(row.seconds, row.frequencies, cut_x, cut_y, axs[0, j_square]) \n",
-    "        spec_square  = spec[cut_x, :]\n",
-    "        spec_square = spec_square[:, cut_y].T\n",
+    "        spec_square  = spec[:, cut_x]\n",
+    "        spec_square = spec_square[cut_y, :]\n",
     "        axs[0, 2].pcolormesh(row.seconds[cut_x], row.frequencies[cut_y], np.log10(spec_square))\n",
     "    axs[0, 0].set_xlabel('time idx')\n",
     "    axs[0, 0].set_ylabel('frequency [Hz]')\n",
@@ -697,9 +697,10 @@
     "    axs[0, 1].set_ylabel('frequency [Hz]')\n",
     "    axs[0, 2].set_xlabel('time idx')\n",
     "    axs[0, 2].set_ylabel('frequency [Hz]')\n",
-    "    fname = f'plots/spec_{filter_dict[\"source\"]}.pdf' \n",
-    "    fig.savefig(fname, bbox_inches='tight')\n",
-    "    print('saved as', fname)"
+    "    \n",
+    "    #fname = f'plots/spec_{filter_dict[\"source\"]}.pdf' \n",
+    "    #fig.savefig(fname, bbox_inches='tight')\n",
+    "    #print('saved as', fname)"
    ]
   },
   {
@@ -858,7 +859,7 @@
     "            distances = row.d_estimate[CUT_FIRST:-CUT_LAST] * 100\n",
     "            \n",
     "            for mic_idx in mic_indices:\n",
-    "                spec = np.abs(row.signals_f[range(row.signals_f.shape[0]), mic_idx, bin_])[CUT_FIRST:-CUT_LAST] # times x frequencies\n",
+    "                spec = np.abs(row.stft[range(row.stft.shape[0]), mic_idx, bin_])[CUT_FIRST:-CUT_LAST] # times x frequencies\n",
     "                axs[0, j].plot(distances, spec, label=f'mic{mic_idx}', color=f'C{mic_idx}')\n",
     "                axs[0, j].set_title(f'motors {motors}')\n",
     "                \n",
@@ -905,7 +906,7 @@
     "df_chosen = filter_by_dicts(df_dist, [filter_dict])\n",
     "assert len(df_chosen) == 1, len(df_chosen)\n",
     "row = df_chosen.iloc[0]\n",
-    "n_mics = row.signals_f.shape[1]"
+    "n_mics = row.stft.shape[1]"
    ]
   },
   {
@@ -927,7 +928,7 @@
     "    mask = valid_times\n",
     "    bin_ = np.argmin(np.abs(row.frequencies - frequency))\n",
     "\n",
-    "spec = np.abs(row.signals_f) # times x mics x freqs\n",
+    "spec = np.abs(row.stft) # times x mics x freqs\n",
     "n_mics = spec.shape[1]\n",
     "\n",
     "distances_cm = np.linspace(10, 60)\n",
@@ -990,13 +991,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 0. clean signals_f\n",
-    "from wall_analysis import clean_signals_f \n",
-    "signals_f = row.signals_f\n",
-    "signals_f[np.isnan(signals_f)] = 0\n",
-    "print(np.min(np.abs(signals_f)), np.max(np.abs(signals_f)))\n",
-    "print(np.min(signals_f), np.max(signals_f))\n",
-    "print(np.nanmin(signals_f), np.nanmax(signals_f))"
+    "# 0. clean stft\n",
+    "from wall_analysis import clean_stft \n",
+    "stft = row.stft\n",
+    "stft[np.isnan(stft)] = 0\n",
+    "print(np.min(np.abs(stft)), np.max(np.abs(stft)))\n",
+    "print(np.min(stft), np.max(stft))\n",
+    "print(np.nanmin(stft), np.nanmax(stft))"
    ]
   },
   {
@@ -1011,20 +1012,21 @@
     "    all_frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
     "else:\n",
     "    all_frequencies = np.fft.rfftfreq(N_BUFFER, 1/44100)\n",
+    "all_frequencies = np.unique(row.frequencies_matrix)\n",
     "spec = np.nanmean(row.spectrogram, axis=1)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "plot_spec = np.full(spec.shape, np.nan)\n",
     "plot_spec[spec>0] = np.log10(spec[spec>0])\n",
     "print(np.nanmin(plot_spec), np.nanmax(plot_spec))\n",
-    "ax.pcolorfast(range(len(row.seconds)), all_frequencies, plot_spec.T)\n",
+    "ax.pcolorfast(range(len(row.seconds)), all_frequencies, plot_spec[:-1, :-1])\n",
     "ax.axhline(frequency, color='black', ls=':')\n",
     "ax.set_ylim(100, 5000)\n",
     "\n",
     "fig, axs = plt.subplots(1, n_mics, squeeze=False)\n",
     "fig.set_size_inches(10, 5)\n",
     "for mic_idx in range(n_mics):\n",
-    "    spec_avg = np.nanmean(row.spectrogram[100: 500, mic_idx, :], axis=0)\n",
+    "    spec_avg = np.nanmean(row.spectrogram[:, mic_idx, 100:500], axis=-1)\n",
     "    axs[0, mic_idx].plot(all_frequencies, spec_avg, color=f'C{mic_idx}')\n",
     "    axs[0, mic_idx].set_xlim(1000, 4000)\n",
     "    axs[0, mic_idx].axvline(frequency, color='black', ls=':')"
@@ -1054,7 +1056,7 @@
    "source": [
     "from evaluate_data import read_df, integrate_yaw\n",
     "from dynamic_analysis import add_pose_to_df\n",
-    "from wall_analysis import get_psd\n",
+    "from frequency_analysis import get_psd\n",
     "\n",
     "#exp_name = '2020_11_23_wall2'; DISTANCE_LIST = np.arange(100, step=10)\n",
     "exp_name = '2020_11_26_wall'; DISTANCE_LIST = np.arange(50)\n",
@@ -1071,7 +1073,7 @@
     "    print('read', fname)\n",
     "except:\n",
     "    print('could not read', fname)\n",
-    "    df_total = pd.DataFrame(columns=['signals_f', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', \n",
+    "    df_total = pd.DataFrame(columns=['stft', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', \n",
     "                                     'frequencies'])\n",
     "\n",
     "    params = dict(\n",
@@ -1104,7 +1106,7 @@
     "                    index_start = df.iloc[0]['index']\n",
     "                    df_pos = df_pos.loc[df_pos.index >= index_start]\n",
     "\n",
-    "                signals_f = np.array([*df.signals_f.values]) # n_times x n_mics x n_freqs\n",
+    "                stft = np.array([*df.signals_f.values]) # n_times x n_mics x n_freqs\n",
     "                frequencies_matrix = np.array([*df.loc[:,'frequencies']])\n",
     "                frequencies = frequencies_matrix[0, :]\n",
     "                assert not np.any(np.any(frequencies_matrix - frequencies[None, :], axis=0))\n",
@@ -1115,15 +1117,15 @@
     "                else:\n",
     "                    yaw = np.full(len(df), -degree)\n",
     "\n",
-    "                spec = np.sum(np.abs(signals_f), axis=1)\n",
-    "                psd = get_psd(signals_f, frequencies, fname='real')\n",
+    "                spec = np.sum(np.abs(stft), axis=1)\n",
+    "                psd = get_psd(stft, frequencies, fname='real')\n",
     "\n",
     "                df_total.loc[len(df_total), :] = dict(\n",
     "                    degree=degree,\n",
     "                    yaw=yaw,\n",
     "                    distance=distance,\n",
     "                    source=str(source),\n",
-    "                    signals_f=signals_f,\n",
+    "                    stft=stft,\n",
     "                    frequencies=frequencies,\n",
     "                    spec=spec,\n",
     "                    psd=psd\n",
@@ -1150,7 +1152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_mics = df_total.iloc[0].signals_f.shape[1]\n",
+    "n_mics = df_total.iloc[0].stft.shape[1]\n",
     "df_matrix_mics = np.empty((n_mics, len(frequencies), len(DISTANCE_LIST)))\n",
     "normalize = False\n",
     "\n",
@@ -1235,13 +1237,13 @@
     "    df = filter_by_dicts(df_total, [filter_dict])\n",
     "    row = df.iloc[0]\n",
     "    \n",
-    "    spec = np.sum(np.abs(row.signals_f), axis=1)\n",
+    "    spec = np.sum(np.abs(row.stft), axis=1)\n",
     "    \n",
     "    plt.figure()\n",
     "    times = np.arange(spec.shape[0])\n",
     "    plt.pcolormesh(times, frequencies, np.log10(spec.T))\n",
     "\n",
-    "    psd = get_psd(row.signals_f, frequencies, ax=plt.gca(), fname='real')\n",
+    "    psd = get_psd(row.stft, frequencies, ax=plt.gca(), fname='real')\n",
     "\n",
     "    plt.figure()\n",
     "    for i_mic in range(psd.shape[0]):\n",
@@ -1282,13 +1284,17 @@
     "        df_this = df_total.loc[(df_total.distance == distance)\n",
     "                               & (df_total.degree == degree)\n",
     "                               & (df_total.source == source)]\n",
+    "        \n",
+    "        if not len(df_this) == 1:\n",
+    "            print('skipping', distance, degree, source)\n",
+    "            continue\n",
     "        row = df_this.iloc[0]\n",
-    "        spec = row.spec\n",
+    "        spec = row.spec #np.mean(row.spec, axis=1)\n",
     "        psd = row.psd\n",
     "        if psd is None:\n",
-    "            psd = get_psd(row.signals_f)\n",
+    "            psd = get_psd(row.stft)\n",
     "        \n",
-    "        axs[i, j].pcolormesh(range(spec.shape[0]), frequencies, np.log10(spec.T))\n",
+    "        axs[i, j].pcolorfast(range(spec.shape[0]), frequencies, np.log10(spec.T))\n",
     "        for i_mic in range(psd.shape[0]):\n",
     "            axs_psd[i, j].semilogy(frequencies, np.abs(psd[i_mic, :]), label=f\"mic{i_mic}\")\n",
     "        axs[0, j].set_title(f'{degree} deg')\n",
@@ -1311,7 +1317,7 @@
     "distances = df_total.distance.unique()[:3]\n",
     "distance_ref = sorted(df_total.distance.unique())[-1]\n",
     "source = 'sweep'\n",
-    "n_mics = df_total.iloc[0].signals_f.shape[1]\n",
+    "n_mics = df_total.iloc[0].stft.shape[1]\n",
     "print('n_mics:', n_mics)\n",
     "    \n",
     "for degree in [0, 27, 54, 81][:2]:\n",
@@ -1413,15 +1419,15 @@
     "                           & (df_total.degree == degree)]\n",
     "    df_this = df_this.loc[df_this.source == source]\n",
     "                           \n",
-    "    signals_f = df_this.iloc[0].signals_f\n",
+    "    stft = df_this.iloc[0].stft\n",
     "    yaw =  df_this.iloc[0].yaw\n",
     "    spec = df_this.iloc[0].spec\n",
     "\n",
-    "    for j in range(signals_f.shape[1]):\n",
-    "        ax.semilogy(range(signals_f.shape[0]), np.abs(signals_f[:, j, chosen_idx]), color=f\"C{j}\", label=f\"mic{j}\")\n",
+    "    for j in range(stft.shape[1]):\n",
+    "        ax.semilogy(range(stft.shape[0]), np.abs(stft[:, j, chosen_idx]), color=f\"C{j}\", label=f\"mic{j}\")\n",
     "\n",
     "    yaw[np.isnan(yaw)] = 0\n",
-    "    axs[1].plot(range(signals_f.shape[0]), yaw)\n",
+    "    axs[1].plot(range(stft.shape[0]), yaw)\n",
     "    for deg in -np.arange(1, 5)*90:\n",
     "        index = np.nanargmin(np.abs(yaw-deg))\n",
     "        axs[1].axvline(x=index, color='C1')\n",
@@ -1442,13 +1448,6 @@
     "plt.xlabel('distance [cm]')\n",
     "plt.title(f'average PSD at {freq} Hz')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
