--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -177,20 +177,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_signals_f\n",
+    "from simulation import get_stft\n",
     "room = generate_room(distance_cm=50, single_mic=True)\n",
     "\n",
-    "signals_f = get_signals_f(room, signals['sweep'], n_times=100)\n",
-    "#signals_f = get_signals_f(room, signals['random'])\n",
-    "#signals_f = get_signals_f(room, signals['multi'])\n",
-    "#signals_f = get_signals_f(room, signals['mono4125'])\n",
+    "stft = get_stft(room, signals['sweep'], n_times=100)\n",
+    "#stft = get_stft(room, signals['random'])\n",
+    "#stft = get_stft(room, signals['multi'])\n",
+    "#stft = get_stft(room, signals['mono4125'])\n",
     "\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
     "\n",
-    "fig, axs = plt.subplots(signals_f.shape[1], 1, sharex=True, squeeze=False)\n",
-    "fig.set_size_inches(8, 2.5 * signals_f.shape[1])\n",
-    "for i in range(signals_f.shape[1]):\n",
-    "    axs[i, 0].pcolormesh(range(signals_f.shape[0]), frequencies, np.log10(np.abs(signals_f[:, i].T)))\n",
+    "fig, axs = plt.subplots(stft.shape[1], 1, sharex=True, squeeze=False)\n",
+    "fig.set_size_inches(8, 2.5 * stft.shape[1])\n",
+    "for i in range(stft.shape[1]):\n",
+    "    axs[i, 0].pcolormesh(range(stft.shape[0]), frequencies, np.log10(np.abs(stft[:, i].T)))\n",
     "    axs[i, 0].set_ylabel(\"frequency [Hz]\")\n",
     "    axs[i, 0].set_title(f\"mic{i}\")\n",
     "axs[i, 0].set_xlabel(\"time index\")"
@@ -259,8 +259,8 @@
     "with progressbar.ProgressBar(max_value=len(distances)-1) as bar:\n",
     "    for j, distance_cm in enumerate(distances):\n",
     "        #room = generate_room(distance_cm=distance_cm, single_mic=True)\n",
-    "        #signals_f = get_signals_f(room, signal)\n",
-    "        #spec = np.sum(np.abs(signals_f), axis=1) / (signals_f.shape[1] * N_BUFFER) # times x frequencies\n",
+    "        #stft = get_stft(room, signal)\n",
+    "        #spec = np.sum(np.abs(stft), axis=1) / (stft.shape[1] * N_BUFFER) # times x frequencies\n",
     "        #spec_time_avg = np.mean(spec, axis=0) \n",
     "        #df_matrix[:, j] = spec_time_avg\n",
     "        slice_mics = get_freq_slice_pyroom(frequencies, distance_cm, signal=signal)\n",
@@ -291,6 +291,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "min_freq = 100\n",
+    "max_freq = 20000\n",
+    "\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 5)\n",
     "freq_start = int(min_freq / FS * N_BUFFER)\n",
@@ -309,8 +312,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "min_freq = 100\n",
-    "max_freq = 20000\n",
     "\n",
     "fig = plt.figure()\n",
     "fig.set_size_inches(10, 5)\n",
@@ -437,19 +438,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment twins"
+    "# Outdated: Experiment twins"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from wall_analysis import get_psd\n",
+    "from frequency_analysis import get_psd\n",
     "import progressbar \n",
     "\n",
-    "df_total = pd.DataFrame(columns=['signals_f', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', 'frequencies'])\n",
+    "df_total = pd.DataFrame(columns=['stft', 'degree', 'yaw', 'distance', 'source', 'psd', 'spec', 'frequencies'])\n",
     "\n",
     "exp_name = '2020_11_23_wall2'; \n",
     "n_times = 300\n",
@@ -457,7 +456,7 @@
     "min_freq=100\n",
     "max_freq=4400\n",
     "bins = select_frequencies(n_buffer=N_BUFFER, fs=FS, min_freq=min_freq, max_freq=max_freq)\n",
-    "frequencies = get_frequencies(FS)[bins]\n",
+    "frequencies = np.fft.rfftfreq(N_BUFFER, 1/FS)[bins]\n",
     "print(frequencies)\n",
     "\n",
     "# which sources to play at which angle\n",
@@ -472,36 +471,36 @@
     "    for distance_cm in distance_list:\n",
     "        for degree in degree_list:\n",
     "            if degree == 360:\n",
-    "                signals_f = np.empty((0, 4, len(frequencies)))\n",
+    "                stft = np.empty((0, 4, len(frequencies)))\n",
     "\n",
     "                # we want to be done with a turn of 360 degrees in ca. 90 steps.\n",
     "                degrees = np.linspace(0, 360, 90)\n",
     "                for deg in degrees:\n",
     "                    room = generate_room(distance_cm=distance_cm, yaw_deg=deg, source=sources[degree])\n",
-    "                    sig_f = get_signals_f(room, n_times=1)[:, :, bins]\n",
-    "                    signals_f = np.concatenate([sig_f, signals_f], axis=0)\n",
+    "                    sig_f = get_stft(room, n_times=1)[:, :, bins]\n",
+    "                    stft = np.concatenate([sig_f, stft], axis=0)\n",
     "\n",
     "                # fill the leftover buffer with measurements at 360\n",
-    "                sig_f = get_signals_f(room, n_times=N_TIMES)[:, :, bins]\n",
-    "                n_buffer_wait = int(FS * (DURATION_SEC - (signals_f.shape[0] * N_BUFFER * 2 / FS)) // (N_BUFFER * 2))\n",
-    "                signals_f = np.concatenate([sig_f[:n_buffer_wait, ...], signals_f])\n",
+    "                sig_f = get_stft(room, n_times=N_TIMES)[:, :, bins]\n",
+    "                n_buffer_wait = int(FS * (DURATION_SEC - (stft.shape[0] * N_BUFFER * 2 / FS)) // (N_BUFFER * 2))\n",
+    "                stft = np.concatenate([sig_f[:n_buffer_wait, ...], stft])\n",
     "\n",
-    "                yaw = np.full(signals_f.shape[0], -360)\n",
+    "                yaw = np.full(stft.shape[0], -360)\n",
     "                yaw[:len(degrees)] = -degrees\n",
     "            else:\n",
     "                room = generate_room(distance_cm=distance_cm, yaw_deg=degree, source=sources[degree])\n",
-    "                signals_f = get_signals_f(room)[:, :, bins]\n",
-    "                yaw = np.full(signals_f.shape[0], -degree)\n",
+    "                stft = get_stft(room)[:, :, bins]\n",
+    "                yaw = np.full(stft.shape[0], -degree)\n",
     "\n",
-    "            spec = np.sum(np.abs(signals_f), axis=1)\n",
-    "            psd = get_psd(signals_f, frequencies, fname='simulated')\n",
+    "            spec = np.sum(np.abs(stft), axis=1)\n",
+    "            psd = get_psd(stft, frequencies, fname='simulated')\n",
     "\n",
     "            df_total.loc[len(df_total), :] = dict(\n",
     "                degree=degree,\n",
     "                yaw=yaw,\n",
     "                distance=distance_cm,\n",
     "                source=sources[degree],\n",
-    "                signals_f=signals_f,\n",
+    "                stft=stft,\n",
     "                frequencies=frequencies,\n",
     "                spec=spec,\n",
     "                psd=psd\n",
