--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -32,7 +32,8 @@
    "outputs": [],
    "source": [
     "from wall_analysis import parse_experiments\n",
-    "exp_name = '2020_12_18_stepper'; \n",
+    "#exp_name = '2020_12_18_stepper'; appendix = \"\"; distance = 51\n",
+    "exp_name = '2020_12_18_flying'; appendix=\"_new\"; distance = 0\n",
     "fname = f'results/{exp_name}_real.pkl'\n",
     "\n",
     "try:\n",
@@ -70,14 +71,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from wall_analysis import add_distance_estimates\n",
-    "\n",
-    "VELOCITY = 0.05 # [m/s], parameter in crazyflie\n",
-    "D_START = 0.6 # [m], starting distance \n",
+    "from wall_analysis import add_distance_estimates, VELOCITY, D_START\n",
     "\n",
     "df_total = df_total.assign(d_estimate=None) # initialize df_estimate\n",
     "df_total = df_total.apply(add_distance_estimates, axis=1)\n",
@@ -123,7 +121,7 @@
    "outputs": [],
    "source": [
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
-    "from wall_analysis import add_spectrogram\n",
+    "from frequency_analysis import add_spectrogram\n",
     "all_frequencies = np.ceil(np.fft.rfftfreq(N_BUFFER, 1/FS))\n",
     "df_total = df_total.assign(spectrogram=None)\n",
     "df_total = df_total.apply(add_spectrogram, axis=1)"
@@ -150,11 +148,12 @@
    "outputs": [],
    "source": [
     "def plot_spectrogram(ax, row, min_freq, max_freq, mic_idx=0, **kwargs):\n",
+    "    all_frequencies = np.unique(row.frequencies_matrix)\n",
     "    plot_freq = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
     "    plot_times = ~np.isnan(row.d_estimate)\n",
     "    assert np.any(plot_times)\n",
     "    #print('time window with valid distances:', np.where(plot_times)[0][[0, -1]])\n",
-    "    spec = row.spectrogram[plot_freq, :, mic_idx][:-1, :]\n",
+    "    spec = row.spectrogram[plot_freq, mic_idx, :][:-1, :]\n",
     "    spec = spec[:, plot_times][:, :-1]\n",
     "    spec[spec > 0] = np.log10(spec[spec > 0])\n",
     "    spec[spec == 0] = np.nan\n",
@@ -168,16 +167,18 @@
     "    ax.pcolorfast(d_increasing, all_frequencies[plot_freq], spec_increasing, **kwargs)\n",
     "\n",
     "def plot_total(ax, row, min_freq, max_freq, mic_idx=0, method=np.nanmean, **kwargs):\n",
+    "    all_frequencies = np.unique(row.frequencies_matrix)\n",
     "    plot_freq = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
     "    plot_times = ~np.isnan(row.d_estimate)\n",
-    "    spec = row.spectrogram[plot_freq, :, mic_idx]\n",
+    "    spec = row.spectrogram[plot_freq, mic_idx, :]\n",
     "    spec[np.isnan(spec)] = 0.0\n",
     "    assert np.all(spec >= 0), spec[np.where(spec<0)]\n",
     "    spec = spec[:, plot_times]\n",
     "    spec[spec == 0] = np.nan\n",
-    "    total = method(spec, axis=1)\n",
-    "    freq = all_frequencies[plot_freq]\n",
-    "    ax.plot(total, freq, **kwargs)\n",
+    "    if np.any(~np.isnan(spec)):\n",
+    "        total = method(spec, axis=1)\n",
+    "        freq = all_frequencies[plot_freq]\n",
+    "        ax.plot(total, freq, **kwargs)\n",
     "    ax.set_xlabel(method.__name__ + ' of spectrogram')"
    ]
   },
@@ -204,7 +205,7 @@
    "source": [
     "from wall_analysis import filter_by_dicts\n",
     "\n",
-    "\n",
+    "mic_type = \"audio_deck\"\n",
     "min_freq = 100\n",
     "max_freq = 5000\n",
     "mic_idx = 0\n",
@@ -259,20 +260,23 @@
    "source": [
     "import scipy.signal\n",
     "\n",
-    "appendix = \"\"\n",
     "source = \"None\"\n",
     "mic_type = \"audio_deck\"\n",
     "\n",
-    "filter_dict = {\"source\":source, \"appendix\":appendix, \"mic_type\":mic_type, \"distance\":51}\n",
+    "filter_dict = {\"source\":source, \"appendix\":\"\", \"mic_type\":mic_type, \n",
+    "               \"distance\": distance}\n",
     "df_sources = filter_by_dicts(df_total, [filter_dict])\n",
+    "if not len(df_sources) == 1:\n",
+    "    print(df_total.source.unique(), df_total.appendix.unique(), \n",
+    "          df_total.mic_type.unique())\n",
     "assert len(df_sources) == 1, df_sources\n",
     "row = df_sources.iloc[0]\n",
     "\n",
-    "\n",
     "plt.figure()\n",
     "times_idx = ~np.isnan(row.d_estimate)\n",
-    "spec = row.spectrogram[:, times_idx, :]\n",
+    "spec = row.spectrogram[:, :, times_idx]\n",
     "    \n",
+    "all_frequencies = np.unique(row.frequencies_matrix)\n",
     "mask = (all_frequencies > min_freq) & (all_frequencies < max_freq)\n",
     "spec[spec==0] = np.nan\n",
     "spec_average = np.nanmean(spec[mask, :, :], axis=(1, 2))\n",
@@ -295,6 +299,7 @@
     "#fig, axs = plt.subplots(len(max_indices), n_mics, sharex=True, squeeze=False, sharey=True)\n",
     "\n",
     "n_harmonics = 4\n",
+    "n_mics = row.spectrogram.shape[1]\n",
     "fig, axs = plt.subplots(n_harmonics, n_mics, sharex=True, squeeze=False)#, sharey=True)\n",
     "fig.set_size_inches(20, 10)\n",
     "\n",
@@ -309,13 +314,17 @@
     "#for j, f_idx in enumerate(max_indices):\n",
     "for j in range(n_harmonics):\n",
     "    freq = freq_max * (j + 1)\n",
-    "    print(freq)\n",
-    "    f_idx = np.where(all_frequencies[mask] == freq)[0][0]\n",
+    "    try:\n",
+    "        f_idx = np.where(all_frequencies[mask] == freq)[0][0]\n",
+    "    except:\n",
+    "        f_idx = np.argmin(np.abs(all_frequencies[mask] - freq))\n",
+    "        print('Warning: did not find', freq, all_frequencies[mask][f_idx]-freq)\n",
+    "        \n",
     "    #freq = int([f_idx])\n",
     "    spec = row.spectrogram[mask, :, :]\n",
     "    \n",
     "    for i in range(n_mics):\n",
-    "        spec_here = spec[f_idx, times_idx, i]\n",
+    "        spec_here = spec[f_idx, i, times_idx]\n",
     "        #axs[j, i].plot(row.seconds[times_idx], spec, color=f'C{j}', label=f'{f}')\n",
     "        axs[j, i].plot(distances, spec_here, color=f'C{j}', label=f'{freq:.0f}Hz')\n",
     "        axs[j, i].legend(loc='upper left')\n",
@@ -346,6 +355,7 @@
    "outputs": [],
    "source": [
     "print('available sources:', df_total.source.unique())\n",
+    "print('available appendices:', df_total.appendix.unique())\n",
     "filter_dict = {\n",
     "    'source': 'None',\n",
     "    #'source': 'mono1750',\n",
@@ -354,11 +364,14 @@
     "    #'source': 'mono3875',\n",
     "    #'source': 'sweep_slow',\n",
     "    #'source': 'sweep_fast',\n",
-    "    'appendix': '_new'\n",
+    "    'appendix': appendix,\n",
+    "    'mic_type': 'audio_deck',\n",
+    "    'distance': distance\n",
     "}\n",
     "rows = filter_by_dicts(df_total, [filter_dict])\n",
-    "assert len(rows) == 1\n",
-    "row = rows.iloc[0]"
+    "assert len(rows) == 1, len(rows)\n",
+    "row = rows.iloc[0]\n",
+    "all_frequencies = np.unique(row.frequencies_matrix)"
    ]
   },
   {
@@ -367,22 +380,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "FREQS = [1750, 2375, 3125, 3875]\n",
     "for source in df_total.source.unique():\n",
     "    #if not 'mono'in source:\n",
     "        #continue\n",
     "    filter_dict['source'] = source\n",
     "    rows = filter_by_dicts(df_total, [filter_dict])\n",
-    "    assert len(rows) == 1\n",
-    "    row = rows.iloc[0]\n",
-    "    \n",
-    "    for mic_idx in [2]:\n",
-    "        fig, ax = plt.subplots()\n",
-    "        fig.set_size_inches(10, 5)\n",
+    "    #assert len(rows) == 1\n",
+    "    #row = rows.iloc[0]\n",
+    "    for i, row in rows.iterrows():\n",
+    "        if row.mic_type != 'audio_deck':\n",
+    "            continue\n",
+    "        for mic_idx in [2]:\n",
+    "            fig, ax = plt.subplots()\n",
+    "            fig.set_size_inches(10, 5)\n",
     "\n",
-    "        plot_spectrogram(ax, row, min_freq=100, max_freq=5000, mic_idx=mic_idx)\n",
-    "        [ax.axhline(f, label=f'{f}', color=f'C{i}', ls=':') for i, f in enumerate(FREQS)]\n",
-    "        ax.set_title(row.source + row.appendix + f\" mic{mic_idx} snr:{row.snr}\")\n",
-    "        ax.legend(loc='lower left')"
+    "            plot_spectrogram(ax, row, min_freq=100, max_freq=5000, mic_idx=mic_idx)\n",
+    "            [ax.axhline(f, label=f'{f}', color=f'C{i}', ls=':') for i, f in enumerate(FREQS)]\n",
+    "            ax.set_title(row.source + row.appendix + f\" mic{mic_idx} snr:{row.snr}\")\n",
+    "            ax.legend(loc='lower left')"
    ]
   },
   {
@@ -391,9 +407,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(filter_dict)\n",
+    "filter_dict['distance'] = distance\n",
     "rows = filter_by_dicts(df_total, [filter_dict])\n",
-    "assert len(rows) == 1\n",
+    "assert len(rows) == 1, rows\n",
     "row = rows.iloc[0]\n",
     "\n",
     "strongest_bin = row.frequencies_matrix[:, 0]\n",
@@ -408,9 +424,12 @@
     "    plt.axhline(f, label=f'{f}', color=f'C{i}')\n",
     "    \n",
     "    # find out where the spectrogram is non-zero for this frequency bin. \n",
-    "    f_idx = np.where(f == all_frequencies)[0][0]\n",
+    "    err = np.abs(f - all_frequencies)\n",
+    "    f_idx = np.argmin(err)\n",
+    "    if err[f_idx] > 10:\n",
+    "        print(f'Warning: frequency mismatch of {err[f_idx]}')\n",
     "    \n",
-    "    spec_total = np.mean(row.spectrogram[f_idx, :, mic_indices], axis=0)\n",
+    "    spec_total = np.mean(row.spectrogram[f_idx, mic_indices, :], axis=0)\n",
     "    spec_total -= np.min(spec_total)\n",
     "    spec_total *= 50 #/ np.max(spec_total)\n",
     "    times = row.seconds[spec_total > 0]\n",
@@ -434,20 +453,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "appendix = \"_new\"\n",
+    "filter_dict = dict(\n",
+    "    appendix = appendix, #\"_new\"\n",
+    "    mic_type = \"audio_deck\",\n",
+    "    distance = distance, #51\n",
+    ")\n",
     "\n",
     "freqs = FREQS\n",
     "\n",
-    "fig, axs = plt.subplots(len(freqs), n_mics, sharex=True)#, sharey=True)\n",
+    "fig, axs = plt.subplots(len(freqs), n_mics, sharex=True, squeeze=False)#, sharey=True)\n",
     "fig.set_size_inches(20, 20)\n",
     "for j, f in enumerate(freqs): \n",
-    "    f_idx = np.where(f == all_frequencies)[0][0]\n",
+    "    \n",
+    "    err = np.abs(f - all_frequencies)\n",
+    "    f_idx = np.argmin(err)\n",
+    "    if err[f_idx] > 10:\n",
+    "        print(f'Warning: frequency mismatch of {err[f_idx]}')\n",
     "    \n",
     "    source = f\"mono{f}\"\n",
-    "    df_sources = filter_by_dicts(df_total, [{\"source\":source, \"appendix\":appendix}])\n",
-    "    assert len(df_sources) == 1\n",
-    "    row = df_sources.iloc[0]\n",
+    "    filter_dict[\"source\"] = source\n",
+    "    df_sources = filter_by_dicts(df_total, [filter_dict])\n",
     "    \n",
+    "    if len(df_sources) != 1:\n",
+    "        print(df_total.source.unique(), df_total.appendix.unique(), df_total.mic_type.unique())\n",
+    "        print(len(df_sources))\n",
+    "        print(df_sources)\n",
+    "        continue\n",
+    "        \n",
+    "    row = df_sources.iloc[0]\n",
     "    # forced\n",
     "    #times_idx = np.where(f == row.frequencies_matrix[:, 0])[0]\n",
     "    # automatic\n",
@@ -456,7 +489,7 @@
     "    distances = row.d_estimate[times_idx] * 100\n",
     "    \n",
     "    for i in range(n_mics):\n",
-    "        spec = row.spectrogram[f_idx, times_idx, i]\n",
+    "        spec = row.spectrogram[f_idx, i, times_idx]\n",
     "        #axs[j, i].plot(row.seconds[times_idx], spec, color=f'C{j}', label=f'{f}')\n",
     "        axs[j, i].plot(distances, spec, color=f'C{j}', label=f'{f} Hz')\n",
     "        axs[j, i].legend(loc='upper left')\n",
@@ -478,32 +511,40 @@
     "freqs = FREQS\n",
     "\n",
     "sources = ['sweep_fast', 'sweep_slow']\n",
-    "appendix = \"_new\"\n",
     "for source in sources:\n",
+    "    filter_dict[\"source\"] = source\n",
+    "    df_sources = filter_by_dicts(df_total, [filter_dict])\n",
     "    \n",
-    "    df_sources = filter_by_dicts(df_total, [{\"source\":source, \"appendix\":appendix}])\n",
+    "    if not len(df_sources) :\n",
+    "        continue\n",
+    "    \n",
     "    for i, row in df_sources.iterrows():\n",
     "        \n",
     "        fig, axs = plt.subplots(len(freqs), n_mics, sharex=True)#, sharey=True)\n",
     "        fig.set_size_inches(20, 20)\n",
     "        fig.suptitle(row.source + row.appendix, y=0.9)\n",
     "        for j, f in enumerate(freqs): \n",
-    "            f_idx = np.where(f == all_frequencies)[0][0]\n",
+    "            \n",
+    "            err = np.abs(f - all_frequencies)\n",
+    "            f_idx = np.argmin(err)\n",
+    "            if err[f_idx] > 10:\n",
+    "                print(f'Warning: frequency mismatch of {err[f_idx]}')\n",
     "\n",
     "            # forced\n",
-    "            times_idx = np.where(f == row.frequencies_matrix[:, 0])[0]\n",
-    "            # automatic\n",
-    "            #times_idx = np.where(np.sum(spectrogram[f_idx, :, :], axis=1) > 0)[0]\n",
-    "            #times_idx = ~np.isnan(row.d_estimate)\n",
-    "            distances = row.d_estimate[times_idx] * 100\n",
+    "            if row.frequencies_matrix is not None:\n",
+    "                times_idx = np.where(f == row.frequencies_matrix[:, 0])[0]\n",
+    "                # automatic\n",
+    "                #times_idx = np.where(np.sum(spectrogram[f_idx, :, :], axis=1) > 0)[0]\n",
+    "                #times_idx = ~np.isnan(row.d_estimate)\n",
+    "                distances = row.d_estimate[times_idx] * 100\n",
     "\n",
-    "            for i in range(n_mics):\n",
-    "                spec = row.spectrogram[f_idx, times_idx, i]\n",
-    "                #axs[j, i].plot(row.seconds[times_idx], spec, color=f'C{j}', label=f'{f}')\n",
-    "                axs[j, i].plot(distances, spec, color=f'C{j}', label=f'{f}', marker='x')\n",
-    "                axs[j, i].legend(loc='upper left')\n",
-    "                axs[j, i].set_title(f'mic{i}')\n",
-    "        #[axs[0, i].set_xlim(5, 20) for i in range(n_mics)]"
+    "                for i in range(n_mics):\n",
+    "                    spec = row.spectrogram[f_idx, i, times_idx]\n",
+    "                    #axs[j, i].plot(row.seconds[times_idx], spec, color=f'C{j}', label=f'{f}')\n",
+    "                    axs[j, i].plot(distances, spec, color=f'C{j}', label=f'{f}', marker='x')\n",
+    "                    axs[j, i].legend(loc='upper left')\n",
+    "                    axs[j, i].set_title(f'mic{i}')\n",
+    "            #[axs[0, i].set_xlim(5, 20) for i in range(n_mics)]"
    ]
   },
   {
